add buttons to bottom of page

--- a/index.html
+++ b/index.html
@@ -20,19 +20,30 @@
 
 <body>
 	<header>Pokédex</header>
-	<div id="pagination">
+	<div class="pagination">
 		<button
 			role="button"
-			id="back"
+			class="back"
 			disabled
 		>Back</button>
 		<button
 			role="button"
-			id="next"
+			class="next"
 		>Next</button>
 	</div>
 	<div id="loading"></div>
 	<div id="cards">
+	</div>
+	<div class="pagination">
+		<button
+			role="button"
+			class="back"
+			disabled
+		>Back</button>
+		<button
+			role="button"
+			class="next"
+		>Next</button>
 	</div>
 </body>
 <script src="script.js"></script>
